[project]
name = "mcp-server-zep-cloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "zep-cloud>=2.1.1,<3.0.0",
    "click>=8.1.7",
    "packaging",
]


[project.scripts]
mcp-server-zep-cloud = "mcp_server_zep_cloud:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"